--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,48 @@
 alembic==1.14.0
+APScheduler==3.11.0
+Authlib==1.4.1
+backoff==2.2.1
 bcrypt==4.2.1
 blinker==1.9.0
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
 click==8.1.8
+coinbase-advanced-py==1.8.2
+cryptography==44.0.1
+dnspython==2.7.0
+email_validator==2.2.0
 Flask==3.1.0
+Flask-APScheduler==1.13.1
 Flask-Bcrypt==1.0.1
+Flask-Login==0.6.3
+Flask-Mail==0.10.0
 Flask-Migrate==4.0.7
+Flask-Principal==0.4.0
+Flask-Security-Too==5.6.0
 Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
 greenlet==3.1.1
 gunicorn==23.0.0
+idna==3.10
+importlib_resources==6.5.2
 itsdangerous==2.2.0
 Jinja2==3.1.5
 Mako==1.3.8
 MarkupSafe==3.0.2
 packaging==24.2
+passlib==1.7.4
+pycparser==2.22
+PyJWT==2.10.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+requests==2.32.3
+six==1.17.0
 SQLAlchemy==2.0.36
 typing_extensions==4.12.2
+tzlocal==5.3
+urllib3==2.3.0
+websockets==13.1
 Werkzeug==3.1.3
-coinbase-advanced-py==1.0.2
-requests>=2.25.0
+WTForms==3.2.1
+zxcvbn-python==4.4.24
