tests not fully working and broke the app

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
-testpaths = app/tests
+testpaths = tests
 python_files = test_*.py
-addopts = -v 
+python_functions = test_*
+addopts = -v --cov=app --cov-report=term-missing
