--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,6 @@ testpaths = tests
 python_files = test_*.py
 python_functions = test_*
 addopts = -v --cov=app --cov-report=term-missing
+
+filterwarnings =
+    ignore::DeprecationWarning
