--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ backoff==2.2.1
 bcrypt==4.2.1
 bleach==6.2.0
 blinker==1.9.0
+cachelib==0.13.0
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
@@ -25,6 +26,7 @@ Flask-Mailman==1.1.1
 Flask-Migrate==4.0.7
 Flask-Principal==0.4.0
 Flask-Security-Too==5.6.0
+Flask-Session==0.8.0
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
 greenlet==3.1.1
@@ -36,6 +38,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.5
 Mako==1.3.8
 MarkupSafe==3.0.2
+msgspec==0.19.0
 packaging==24.2
 passlib==1.7.4
 pluggy==1.5.0
