--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ email_validator==2.2.0
 Flask==3.1.0
 Flask-APScheduler==1.13.1
 Flask-Bcrypt==1.0.1
+Flask-Limiter==3.5.0
 Flask-Login==0.6.3
 Flask-Mail==0.10.0
 Flask-Mailman==1.1.1
