--- a/requirements.txt
+++ b/requirements.txt
@@ -15,12 +15,13 @@ click==8.1.8
 coinbase-advanced-py==1.8.2
 coverage==7.6.12
 cryptography==44.0.1
+Deprecated==1.2.18
 dnspython==2.7.0
 email_validator==2.2.0
 Flask==3.1.0
 Flask-APScheduler==1.13.1
 Flask-Bcrypt==1.0.1
-Flask-Limiter==3.5.0
+Flask-Limiter==3.12
 Flask-Login==0.6.3
 Flask-Mail==0.10.0
 Flask-Mailman==1.1.1
@@ -37,20 +38,31 @@ importlib_resources==6.5.2
 iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.5
+limits==5.1.0
 Mako==1.3.8
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+mdurl==0.1.2
 msgspec==0.19.0
+ordered-set==4.1.0
 packaging==24.2
 passlib==1.7.4
+pillow==11.2.1
 pluggy==1.5.0
 pycparser==2.22
+Pygments==2.19.1
 PyJWT==2.10.1
+pyotp==2.9.0
+pypng==0.20220715.0
+PyQRCode==1.2.1
 pytest==8.3.5
 pytest-cov==6.0.0
 pytest-flask==1.3.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+qrcode==7.4.2
 requests==2.32.3
+rich==13.9.4
 setuptools==75.8.2
 six==1.17.0
 SQLAlchemy==2.0.36
@@ -60,5 +72,6 @@ urllib3==2.3.0
 webencodings==0.5.1
 websockets==13.1
 Werkzeug==3.1.3
+wrapt==1.17.2
 WTForms==3.2.1
 zxcvbn-python==4.4.24
