--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
+aiodns==3.4.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.2
+aiosignal==1.3.2
 alembic==1.14.0
 APScheduler==3.11.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
+attrs==25.3.0
 Authlib==1.4.1
 backoff==2.2.1
 bcrypt==4.2.1
 bleach==6.2.0
 blinker==1.9.0
 cachelib==0.13.0
+ccxt==4.4.86
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
@@ -18,6 +24,7 @@ cryptography==44.0.1
 Deprecated==1.2.18
 dnspython==2.7.0
 email_validator==2.2.0
+flake8==7.2.0
 Flask==3.1.0
 Flask-APScheduler==1.13.1
 Flask-Bcrypt==1.0.1
@@ -31,6 +38,7 @@ Flask-Security-Too==5.6.0
 Flask-Session==0.8.0
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
+frozenlist==1.6.0
 greenlet==3.1.1
 gunicorn==23.0.0
 idna==3.10
@@ -38,18 +46,25 @@ importlib_resources==6.5.2
 iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.5
+krakenex==2.2.2
 limits==5.1.0
 Mako==1.3.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+mccabe==0.7.0
 mdurl==0.1.2
 msgspec==0.19.0
+multidict==6.4.4
 ordered-set==4.1.0
 packaging==24.2
 passlib==1.7.4
 pillow==11.2.1
 pluggy==1.5.0
+propcache==0.3.1
+pycares==4.8.0
+pycodestyle==2.13.0
 pycparser==2.22
+pyflakes==3.3.2
 Pygments==2.19.1
 PyJWT==2.10.1
 pyotp==2.9.0
@@ -74,4 +89,5 @@ websockets==13.1
 Werkzeug==3.1.3
 wrapt==1.17.2
 WTForms==3.2.1
+yarl==1.20.0
 zxcvbn-python==4.4.24
