--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,6 @@ backoff==2.2.1
 bcrypt==4.2.1
 bleach==6.2.0
 blinker==1.9.0
-cachelib==0.13.0
 ccxt==4.4.86
 certifi==2025.1.31
 cffi==1.17.1
@@ -29,6 +28,7 @@ Flask==3.1.0
 Flask-APScheduler==1.13.1
 Flask-Bcrypt==1.0.1
 Flask-Limiter==3.12
+Flask-Caching==2.1.0
 Flask-Login==0.6.3
 Flask-Mail==0.10.0
 Flask-Mailman==1.1.1
@@ -73,6 +73,7 @@ PyQRCode==1.2.1
 pytest==8.3.5
 pytest-cov==6.0.0
 pytest-flask==1.3.0
+python-coinmarketcap==0.6
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 qrcode==7.4.2
