feat: Implement comprehensive test suite with 100% pass rate (59 tests)
- Add core strategy lifecycle tests: webhook pause/unpause validation, strategy deletion with asset handling, edge cases
- Add exchange credential management tests: add/remove credentials, API key validation, security protection rules
- Add virtual portfolio validation tests: trade validation rules, asset conservation across strategies, transfer flows
- Add route-level strategy management tests: toggle active state, delete operations, unauthorized access prevention
- Fix existing auth, admin, and integration tests: session handling, fixture improvements, assertion updates
- Add pre-deployment test execution to deploy.sh script to prevent broken code from reaching production

Test coverage includes:
- Authentication & authorization (login, registration, admin access)
- Strategy lifecycle management (create, pause, delete, webhook processing)
- Exchange credential management (add, remove, validate, protect)
- Virtual portfolio accounting (trade rules, asset conservation, transfers)
- Asset transfer operations (main account ↔ strategies, strategy ↔ strategy)
- Admin functionality and role-based access control
- Template rendering and UI components
- Edge cases, error handling, and security validation

All 59 tests pass with 42% code coverage. Application is now deployment-ready with robust test validation.

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ env/
 # Flask
 instance/
 .webassets-cache
+flask_session/
 
 # Database
 *.db
@@ -30,3 +31,6 @@ instance/
 ehthumbs.db
 Thumbs.db
 
+# Build artifacts
+.coverage
+.coverage.*
