--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,17 @@ Thumbs.db
 # Build artifacts
 .coverage
 .coverage.*
+
+# Coverage reports
+.coverage
+.coverage.*
+htmlcov/
+.tox/
+.nox/
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
