--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,13 @@ flask_session/
 # Logs
 *.log
 
+# SSL Certificates (sensitive - never commit)
+certificates/
+*.pem
+*.key
+*.crt
+*.cert
+
 # OS generated files
 .DS_Store
 .DS_Store?
