--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ Flask-Mail==0.10.0
 Flask-Mailman==1.1.1
 Flask-Migrate==4.0.7
 Flask-Principal==0.4.0
+Flask-ReCaptcha==0.4.2
 Flask-Security-Too==5.6.0
 Flask-Session==0.8.0
 Flask-SQLAlchemy==3.1.1
